[package]
name = "n210dl"
version = "0.1.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "Unlicense"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
http = "0.2"
http-serde = "1.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
