[package]
name = "n210dl"
version = "0.1.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "Unlicense"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
http = "1.0"
http-serde = "2.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "2.8", features = ["json", "socks-proxy"] }
